# blockens-snake

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
include/: blocken.h
resources/shaders/: dot.frag  dot.vert  grid.frag  grid.vert  text.frag  text.vert
src/: main.cpp
